# arborui

./: .markdownlint-cli2.yaml  AGENTS.md  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml  skills-lock.json
.github/workflows/: benchmarks.yml  release.yml
comparisons/collection-lab-ratatui/: Cargo.toml  README.md
comparisons/collection-lab-ratatui/benches/: application_turns.rs
comparisons/collection-lab-ratatui/src/: lib.rs
comparisons/collection-lab-ratatui/tests/: equivalence.rs  memory_metrics.rs  phase_metrics.rs
crates/arborui/: Cargo.toml
crates/arborui-backend-crossterm/: Cargo.toml
crates/arborui-backend-crossterm/src/: backend.rs  events.rs  lib.rs  output.rs
crates/arborui-backend-crossterm/tests/: pty_lifecycle.rs
crates/arborui-core/: Cargo.toml
crates/arborui-core/src/: lib.rs
crates/arborui-layout/: Cargo.toml
crates/arborui-layout/src/: dimension.rs  engine.rs  lib.rs  style.rs  tree.rs
crates/arborui-render/: Cargo.toml
crates/arborui-render/src/: buffer.rs  canvas.rs  cell.rs  frame.rs  grapheme_store.rs  hit.rs  lib.rs  surface.rs
crates/arborui-runtime/: Cargo.toml
crates/arborui-runtime/src/: app.rs  event.rs  lib.rs  proxy.rs  runner.rs  scheduler.rs
crates/arborui-terminal/: Cargo.toml
crates/arborui-terminal/src/: backend.rs  capabilities.rs  event.rs  lib.rs  session.rs  state.rs
crates/arborui-test/: Cargo.toml
crates/arborui-test/src/: app.rs  backend.rs  clock.rs  frame.rs  lib.rs  tests.rs
crates/arborui-text/: Cargo.toml
crates/arborui-text/src/: edit.rs
crates/arborui-ui/: Cargo.toml
crates/arborui-ui/src/: element.rs  event.rs  focus.rs  invalidation.rs  lib.rs  node.rs  tree.rs
crates/arborui-widgets/: Cargo.toml
crates/arborui-widgets/src/: block.rs  button.rs  column.rs  input.rs  lib.rs  list.rs  row.rs  scroll.rs  spacer.rs  stack.rs  tests.rs  text.rs
crates/arborui/benches/: stabilization.rs
crates/arborui/src/: lib.rs
crates/arborui/tests/: performance_contracts.rs  render_timings.rs
crates/yatui-backend-crossterm/: Cargo.toml
crates/yatui-backend-crossterm/src/: backend.rs  events.rs  lib.rs  output.rs
crates/yatui-layout/: Cargo.toml
crates/yatui-layout/src/: engine.rs  lib.rs  measure.rs  style.rs  tree.rs
crates/yatui-render/src/: canvas.rs
crates/yatui-terminal/: Cargo.toml
crates/yatui-terminal/src/: backend.rs  capabilities.rs  event.rs  lib.rs  session.rs  state.rs
crates/yatui-ui/: Cargo.toml
crates/yatui-ui/src/: element.rs  key.rs  lib.rs  node.rs  reconcile.rs  tree.rs
crates/yatui/src/: lib.rs
docs/: README.md  architecture.md  compatibility.md  crates.md  releasing.md  rendering-and-text.md  terminal.md  testing-and-roadmap.md  ui-and-runtime.md
examples/collection-lab/src/: lib.rs
examples/collection-lab/tests/: damage_metrics.rs
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs  main.rs
examples/counter/tests/: counter.rs
examples/focus-queue/src/: lib.rs  main.rs
examples/focus-queue/tests/: focus_queue.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: render_transactions.rs  text_edit_sequences.rs
scripts/: check-architecture-dependencies.mjs  check-package-contents.sh  publish.sh
