[package]
name = "arborui-backend-crossterm"
description = "Crossterm terminal backend for arborui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
crossterm = "0.29.0"
arborui-core = { workspace = true }
arborui-render = { workspace = true }
arborui-terminal = { workspace = true }

[dev-dependencies]
portable-pty = "=0.9.0"
arborui-text = { workspace = true }
