[package]
name = "arborui-runtime"
description = "Backend-neutral application runtime and scheduler for arborui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
arborui-core = { workspace = true }
arborui-render = { workspace = true }
arborui-terminal = { workspace = true }
arborui-ui = { workspace = true }
