[package]
name = "yatui-backend-crossterm"
description = "Crossterm terminal backend for yatui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
crossterm = "0.29.0"
yatui-core = { workspace = true }
yatui-render = { workspace = true }
yatui-terminal = { workspace = true }

[dev-dependencies]
yatui-text = { workspace = true }
