[package]
name = "yatui-layout"
description = "Backend-independent terminal cell layout for yatui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
taffy = { version = "0.12.1", default-features = false, features = ["std", "taffy_tree", "flexbox"] }
yatui-core = { workspace = true }
