[package]
name = "yatui-terminal"
description = "Backend-neutral terminal events, state, and lifecycle contracts for yatui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
yatui-core = { workspace = true }
yatui-render = { workspace = true }
yatui-text = { workspace = true }
